ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nef-ingress
  labels:
    app: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
        - validation-athens.com
    secretName: test-tls      
  rules:
    - host: validation-athens.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nef-backend
                port:
                  number: 80
    - host: mongocapif.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capif-mongo-express
                port:
                  number: 8082
    - host: mongonef.com
      http:
        paths:    
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
    - host: zortenetapp.com
      http:
        paths:    
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zortenetapp
                port:
                  number: 5000
